kubernetes/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: apddito-com-ingress
  namespace: appditto-com
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/configuration-snippet: |
        real_ip_header CF-Connecting-IP;
spec:
  tls:
  - hosts:
    - appditto.com
    - www.appditto.com
    secretName: appditto-com-server-secret
  rules:
  - host: appditto.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: appditto-frontend-service
            port: 
              number: 3000
      - path: /inquire
        pathType: Prefix
        backend:
          service: 
            name: appditto-server-service
            port:
              number: 3001
  - host: www.appditto.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: appditto-frontend-service
            port:
              number: 3000
      - path: /inquire
        pathType: Prefix
        backend:
          service:
            name: appditto-server-service
            port: 
              number: 3001
